# itp-interface

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt  tacc_requirements.txt
.github/workflows/: github-build-actions-python314t.yaml  github-build-actions.yaml  github-publish-actions.yaml
src/app/data_explorer/: README.md  __init__.py  db_utils.py  graph_utils.py  lean_db_explorer.py
src/app/itp-gui/: app.py
src/app/itp-gui/static/: app.js  style.css  (+1 more)
src/itp_interface/agent/: simple_proof_agent.py
src/itp_interface/coq_ser_api/: __init__.py  lsp_backend.py
src/itp_interface/coq_ser_api_old/: util.py
src/itp_interface/lean/: .gitignore  lean4_local_data_extraction_transform.py  parsing_helpers.py  simple_lean4_sync_executor.py  tactic_parser.py
src/itp_interface/lean_server/: commands.py  lean3_search_tool.py  lean4_cmd_server.py  lean4_repl_interface.py  lean4_utils.py  lean_cmd_server.py  lean_sync_server.py  lean_utils.py
src/itp_interface/main/: config.py  extract_benchmark_dataset.py  filter_dataset.py  init_ray.py  install.py  merge_dataset.py  run_tool.py  run_tool_no_hydra.py
src/itp_interface/repo/: build.py  clone.py  dataset_discovery.py
src/itp_interface/retrieval/: abstraction.py  coq_bm25_reranker.py  isabelle_bm25_reranker.py  lean3_bm25_reranker.py
src/itp_interface/rl/: abstraction.py  proof_action.py  proof_state.py  proof_tree.py  ray_proof_env_pool.py  simpl_proof_env_pool.py  simple_proof_env.py  simple_proof_env_pool.py  simple_proof_env_ray.py  thread_proof_env_pool.py
src/itp_interface/scripts/: setup.sh  setup_simple.sh
src/itp_interface/tools/: basic_utils.py  bin_packing.py  cache.py  coq_build_spec.py  coq_build_tool.py  coq_context_helper.py  coq_executor.py  coq_local_data_generation_transform.py  coq_parse_utils.py  coq_raw_proofs.py  coq_theorem_proof_pair_generation_transform.py  coq_training_data_generator.py  dynamic_coq_proof_exec.py  dynamic_int_proof_exec.py  dynamic_isabelle_proof_exec.py  dynamic_lean4_proof_exec.py  dynamic_lean_proof_exec.py  int_context.py  int_context_helper.py  int_executor.py  isabelle_context_helper.py  isabelle_executor.py  isabelle_local_data_generation_transform.py  isabelle_parse_utils.py  isabelle_server.py  iter_helpers.py  lean4_context_helper.py  lean4_local_data_extraction_transform.py  lean4_local_data_generation_transform.py  lean4_sync_executor.py  lean_cmd_executor.py  lean_context_helper.py  lean_dojo_data_generation_transform.py  lean_executor.py  lean_local_data_generation_transform.py  lean_parse_utils.py  log_utils.py  misc_defns.py  proof_env_utils.py  proof_exec_callback.py  (+8 more)
src/main/: config.py  run_tool.py
src/main/config/: experiments.yaml
src/retrieval/: lean3_bm25_reranker.py
src/test/: parsing_helpers_test.py  simpl_env_test.py  simple_data_extract_test.py  simple_data_gen_test.py  simple_env_coq_test.py  simple_env_lean_test.py  simple_env_test.py  test_python314_threading.py  test_simple_proof_env.py  test_simple_proof_env_pool.py  test_simple_proof_env_ray.py  test_tactic_parser.py
(+131 files in other folders)
