[build-system]
requires = [
    "hatchling"
]
build-backend = "hatchling.build"
[project]
name = "itp_interface"
version = "1.1.14"
authors = [
  { name="Amitayush Thakur", email="amitayush@utexas.edu" },
]
description = "Generic interface for hooking up to any Interactive Theorem Prover (ITP) and collecting data for training ML models for AI in formal theorem proving."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "dataclasses-json==0.5.7",
    "editdistance==0.8.1",
    "numpy>=1.24.0",
    "pexpect==4.8.0",
    "sexpdata==1.0.0",
    "pampy==0.3.0",
    "ray>=2.50.0; python_version<'3.14'",
    "pydantic>=2.10.6",
    "faiss-cpu>=1.6.1",
    "filelock>=3.12.4",
    "regex==2023.10.3",
    "tqdm>=4.27",
    "wget==3.2",
    "hydra-core>=1.0.0",
    "omegaconf>=2.0.1",
    "jsonlines==4.0.0",
    "soundfile==0.12.1",
    "rank_bm25==0.2.2",
    "parglare==0.16.1",
    "urllib3>=2.0.7",
    "mathlibtools==1.3.2",
    "pylspclient==0.0.3",
    "protobuf==3.20.3; python_version<'3.14'",
    "grpcio>=1.51.3; python_version<'3.14'"
]

[project.urls]
Homepage = "https://github.com/trishullab/itp-interface"
Issues = "https://github.com/trishullab/itp-interface/issues"

[project.scripts]
install-itp-interface = "itp_interface.main.install:install_itp_interface"
install-lean-repl = "itp_interface.main.install:install_lean_repl"
run-itp-data-gen = "itp_interface.main.run_tool_no_hydra:main"
